<resources>
    <string name="app_name">Create Your First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="go_to_first">Go to First</string>
    <string name="go_to_third">Go to Third</string>
    <string name="Welcome">Welcome</string>
    <string name="Back">Back</string>
    <string name="log">Login </string>
    <string name="End">The End </string>
    <string name="insert_your_email">Insert your email</string>
    <string name="insert_your_password">Insert your password</string>
    <string name="your_social_network">Your social network</string>
    <string name="access">Your credential</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="fifth_fragment">fifth fragment</string>
    <string name="write">write a number</string>
    <string name="tap">tap</string>
    <string name="hello_world">HELLO WORLD</string>
</resources>